# mugatu

./: .travis.yml  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  setup.cfg
.github/workflows/: test.yml
docs/: requirements.txt
docs/sphinx/: .readthedocs.yaml  api.rst  commissioning_design_example_all_skies.ipynb  conf.py  example.rst  index.rst  intro.rst  modules.rst  mugatu.rst
examples/: Commissioning_SpectrophotoStandards_v0.0.0.fits  Commissioning_SpectrophotoStandards_v1.0.0.fits  bright_neighbor_test.py  comm_all_skies_example.fits  comm_specphoto_stands_example.fits  commissioning_design_example_all_skies.ipynb  commissioning_design_example_spectrophotometric_standards.ipynb  manual_comm_spectrophoto.fits  manual_design_test.fits  rsCadences-test-newfield-apo.fits
examples/stab766_supplemental_files/: Table1.csv
python/mugatu/: __init__.py  comm_designs.py  design_validations.py  designmode.py  designs_to_targetdb.py  exceptions.py  fpsdesign.py  obsmode.py
python/mugatu/templates/: dmode_check_w_dists.html  dmode_check_w_dists_sky.html  main_validation_page.html  valid_check.html  valid_check_w_dists.html
tests/: Commissioning_SpectrophotoStandards_v0.0.0.fits  comm_all_skies_example.fits  comm_design_examples.ipynb  comm_design_test.py  commissioning_design_carton_to_design.ipynb  commissioning_design_example_all_skies.ipynb  commissioning_design_example_spectrophotometric_standards.ipynb  designmode_test.py  manual_design_test.fits  manual_design_test.py  test_main.py
