[tool.poetry]
name = "sdss-mugatu"
version = "1.0.0"
description = "Package to read, write and validate FPS designs"
authors = ["Ilija Medan"]
license = "BSD 3-Clause License"
packages = [
    { include = "mugatu", from = "python" }
]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.5"
fitsio = "^1.0.5"
sdssdb = "^0.4.12"
sdss-access = "^1.1.1"
sdss-coordio = "1.0.0"
scipy = "^1.6.0"
jupyter = "^1.0.0"
ortools = "9.1.9490"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
