[tool.poetry]
name = "sdss-mugatu"
version = "1.0.4"
description = "Package to read, write and validate FPS designs"
authors = ["Ilija Medan"]
license = "BSD 3-Clause License"
homepage = "https://pypi.org/project/sdss-mugatu/"
repository = "https://github.com/sdss/mugatu"
documentation = "https://mugatu.readthedocs.io/en/latest/"
readme = "README.md"
packages = [
    { include = "mugatu", from = "python" }
]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.5"
fitsio = "^1.0.5"
sdssdb = "^0.4.13"
sdss-access = "1.1.1"
sdss-coordio = "1.0.0"
scipy = "^1.6.0"
jupyter = "^1.0.0"
ortools = "9.1.9490"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
