[tool.poetry]
name = "sdss-mugatu"
version = "2.0.0"
description = "Package to read, write and validate FPS designs"
authors = ["Ilija Medan"]
license = "BSD 3-Clause License"
homepage = "https://pypi.org/project/sdss-mugatu/"
repository = "https://github.com/sdss/mugatu"
documentation = "https://mugatu.readthedocs.io/en/latest/"
readme = "README.md"
packages = [
    { include = "mugatu", from = "python" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
fitsio = "^1.0.5"
sdssdb = "^0.5.4"
sdss-access = "1.1.1"
sdss-coordio = "1.5.2"
sdss-kaiju = "1.3.1"
scipy = "^1.6.0"
jupyter = "^1.0.0"
ortools = "^9.1.9490"
DateTime = "^4.3"
notebook = "^6.4.12"
astropy = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
